# PX4_ROS2_workspace

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  repo_assistant_config.json  search.html
.github/workflows/: delete-old-workflow.yaml  docker-images.yaml  documentation.yaml  manual-delete-workflow.yaml  self-hosted-gpu.yaml  self-hosted-pixhawk.yaml  ubuntu-latest-tests.yaml
collect_log/: index.html
docker/: Dockerfile_fw_upload  Dockerfile_generate_airframe  Dockerfile_gz_sim  Dockerfile_micro_dds_agent  Dockerfile_pymavlink  Dockerfile_ros2_builder  Dockerfile_ros2_debug  Dockerfile_sitl_builder
docs/: collect_log.md  firmware.md  holybro_pixhawk_jetson_baseboard_setup.md  index.md  quick_start.md  simulation.md  structure.md
firmware/: index.html
gz_sim/custom_airframes/: README.md
gz_sim/custom_plugins/gz_lift_drag_plugin/: CMakeLists.txt
gz_sim/custom_plugins/gz_lift_drag_plugin/include/: lift_drag_system.hpp
gz_sim/custom_plugins/gz_lift_drag_plugin/src/: lift_drag_system.cpp
gz_sim/custom_worlds/: README.md  my_windy_world.sdf
holybro_pixhawk_jetson_baseboard_setup/: index.html
log/: collect_logs.sh
quick_start/: index.html
search/: search_index.json
simulation/: index.html
structure/: index.html
tests/: check_display.py  simulation_config.yaml  simulation_config_custom.yaml  test_firmware_upload.sh  test_generate_airframe.sh  test_launch_simulation.sh  test_parameters_upload.sh  test_params.txt
tools/configurations/: my_custom_quad.yaml  remote_vscode_tasks.json  remove_dds.param  simulation_config.yaml  (+2 more)
(+31 files in other folders)
